fixing draggable scrollbars

--- a/sass/scrollThis.scss
+++ b/sass/scrollThis.scss
@@ -4,15 +4,20 @@
 	width:7px; 
 	position:absolute; 
 	height:100%;
-} 
-.scrollbar{
+}
+
+.scrollbar, .scrollbar_mock{
+	position: absolute;
 	top:0; 
 	width:7px; 
-	border-radius:3px; 
 	height:0px; 
-	background: #999;
-	opacity:0;
 	cursor:pointer; 
+	opacity:0;
+};
+
+.scrollbar{
+	border-radius:3px; 
+	background: #999;
 	-webkit-transition: opacity .8s linear; 
 	-moz-transition: opacity .8s linear; 
 	-o-transition: opacity .8s linear; 
@@ -20,7 +25,8 @@
 	&:active{
 		background:#777;
 	}
-} 
+}
+
 .scroll_time .scrollbar{
 	opacity:1
 } 
